# colorcolor

./: .gitignore  .travis.yml  LICENSE  README.md  colcol.py  investigate_clouds.py  setup.cfg  setup.py  test_import.py
colorcolor/: compute_colors.py  investigate_clouds.py  stats.py
db_utils/: Step1CreateHeader.py  Step2InsertModels.py
notebooks/: 1_StartHere.ipynb  2_ExploreSpectra.ipynb  3_ColorColorFigs.ipynb  4_StatsMethods.ipynb  wfirst_colors_dataframe.pk
reference/: VPL.json  WFIRST.json  filters.json
scripts/: MessyStatistics.ipynb  Multivariate&PCA.ipynb  bokeh_color_app.py  compute_colors_parallel.py  compute_wfirst_parallel.py  explore_albedos
scripts/AlbUI/: download.js  main.py
