[metadata]
name = colorcolor
version = 0.0
summary = color-color classification for extrasolar giant planets
description-file = README.md
author = Natasha Batalha at Space Telescope Science Institute
author-email = natasha.e.batalha@gmail.com
home-page = https://natashabatalha.github.io
url = https://github.com/natashabatalha/colorcolor
; Add this line to the classifier options if your project supports Python 3:
Programming Language :: Python :: 3
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = 
	colorcolor
	colorcolor.AlbUI


;scripts = colorcolor/explore_albedos

;package_data = 
;    colorcolor.AlbUI = *.js

   
    
    
# [install_data]
# pre-hook.glob-data-files = stsci.distutils.hooks.glob_data_files

[zest.releaser]
release = no

[backwards_compat]
use_2to3 = True
zip_safe = False
